issue01 correct loader, pagination, authors table, truncated breadcrumbs

--- a/src/components/Loader/loader.module.css
+++ b/src/components/Loader/loader.module.css
@@ -14,4 +14,8 @@
 .animationContainer {
   align-self: center;
   justify-self: center;
+  padding: 25px;
+  height: inherit;
 }
+
+
